// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component renders correctly with defaults 1`] = `
<View
  style={
    Object {
      "bottom": 0,
      "elevation": 100,
      "left": 0,
      "opacity": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 100,
    }
  }
>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "hsla(0, 0%, 0%, 0.5)",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": 32,
      }
    }
  >
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "hsl(0, 0%, 100%)",
          "borderRadius": 8,
          "marginHorizontal": 60,
          "maxWidth": 500,
          "paddingBottom": 36,
          "paddingHorizontal": 36,
          "paddingTop": 52,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "hsl(0, 0%, 0%)",
            "fontSize": 24,
            "fontWeight": "300",
            "letterSpacing": 0,
            "opacity": 1,
            "paddingBottom": 12,
          }
        }
      >
        bob
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingTop": 52,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Alert component renders correctly with props 1`] = `
<View
  style={
    Object {
      "bottom": 0,
      "elevation": 100,
      "left": 0,
      "opacity": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 100,
    }
  }
>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "hsla(0, 0%, 0%, 0.5)",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "padding": 32,
      }
    }
  >
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "hsl(0, 0%, 100%)",
          "borderRadius": 8,
          "marginHorizontal": 60,
          "maxWidth": 500,
          "paddingBottom": 36,
          "paddingHorizontal": 36,
          "paddingTop": 52,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "hsl(0, 0%, 0%)",
            "fontSize": 24,
            "fontWeight": "300",
            "letterSpacing": 0,
            "opacity": 1,
            "paddingBottom": 12,
          }
        }
      >
        nope
      </Text>
      <Text
        style={
          Object {
            "color": "hsl(0, 0%, 0%)",
            "fontSize": 14,
            "fontWeight": "300",
            "letterSpacing": 0.25,
            "opacity": 1,
          }
        }
      >
        yep
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingTop": 52,
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderWidth": 1,
              "flex": 1,
              "flexDirection": "row",
              "height": 36,
              "justifyContent": "center",
              "marginRight": 8,
              "opacity": 1,
              "paddingHorizontal": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "hsl(211, 100%, 50%)",
                "fontSize": 14,
                "fontWeight": "600",
                "letterSpacing": 0.75,
                "opacity": 1,
                "textAlign": "center",
              }
            }
          >
            BIRD
          </Text>
        </View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderRadius": 4,
              "borderWidth": 1,
              "flex": 1,
              "flexDirection": "row",
              "height": 36,
              "justifyContent": "center",
              "marginLeft": 8,
              "opacity": 1,
              "paddingHorizontal": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "hsl(208, 7%, 46%)",
                "fontSize": 14,
                "fontWeight": "600",
                "letterSpacing": 0.75,
                "opacity": 1,
                "textAlign": "center",
              }
            }
          >
            DOG
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
